# kiwi-mainboard-clients

./: .gitignore  Cargo.toml  README.md  how --stat
.github/workflows/: electron-build.yml
kiwi-3d/: index.html  package-lock.json  package.json
kiwi-3d/src/: main.js
plotly-app/: main.cjs  package-lock.json
plotly-client/: Cargo.toml
plotly-client/src/: broadcast.rs  index.html  main.rs  udp.rs
plotly-client/web/: dashboard.html  index.html  landing.js  plot.js  plot.worker.js  styles.css
python-client/: app.py  decoder.py  nc_thread.py  plot.py  requirements.txt  setup.bat  storesystem.py  udp_thread.py  xlsx_thread.py
scripts/: repub-tag.sh
udp-dummy-server/: Cargo.toml
udp-dummy-server/src/: main.rs
web/3d/: index.html
web/3d/assets/: index-CrwodD_k.js
