[package]
name = "plotly-client"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6"
actix-web = "4.11"
actix-web-lab = "0.24"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
parking_lot = "0.12"
tokio = { version = "1.48", features = ["sync", "io-util"] }
tokio-stream = "0.1"
clap = { version = "4.3", features = ["derive"] }
atomic-time = "0.1"
socket2 = "0.6"
kiwi-measurements = { workspace = true, features = ["serde"] }
serde_json = "1.0.145"
